<resources>
    <!--    First two Activities    -->
    <string name="app_name">Eventure</string>
    <string name="welcome_button">Welcome</string>
    <string name="welcome_screen_prompt">Please Select Account Type:</string>
    <string name="or">Or</string>
    <string name="explorer_button">Explorer</string>
    <string name="event_organizer_button">Event Organizer</string>
    <!--    Admin Login -->
    <string name="admin_login_text_view">Please log in to manage and oversee</string>
    <string name="username_or_email">Email or Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="go_to_admin_login">Go to admin login</string>
    <!--    Explorer Login  -->
    <string name="explorer_login_first_prompt">Ready to explore new adventures?</string>
    <string name="explorer_login_second_prompt">Eventure is your gateway to discover unforgettable experiences</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="explorer_login_create_an_account">Don\'t have an Account? Sign up now</string>
    <string name="explorer_login_username_or_password">Username or Password</string>
    <!--    Forgot Password -->
    <string name="forgot_password_first_view_prompt">Forgot Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email_edit_text_hint">e.g. Example@gmail.com</string>
    <string name="reset_password">Reset Password</string>
    <string name="admin_login_username_or_email">Username or Email</string>
    <!--    Explorer Sign up    -->
    <string name="explorer_signup_header">Sign Up</string>
    <string name="explorer_signup_prompt">To discover new experiences, connect with your community, and create everlasting memories</string>
    <string name="explorer_signup_username">Username</string>
    <string name="explorer_signup_email">Your Email</string>
    <string name="explorer_signup_password">Create your Password</string>
    <string name="explorer_signup_repeat_password">Re-type Password</string>
    <string-array name="gender_spinner">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="explorer_signup_create_an_account">Create an Account</string>
    <string name="explorer_signup_gender_text_view">Gender</string>
    <string name="explorer_signup_birthdate_text_view">Birthdate</string>
    <!--Event Organizer Login-->
    <string name="event_organizer_login_first_prompt">Ready To Create Memorable Experiences?</string>
    <string name="event_organizer_login_second_prompt">Eventure is your Platform For Creating Unforgettable Experiences</string>
    <string name="event_organizer_login_username_or_email">Username or Email</string>
    <!--Event Organizer Signup-->
    <string name="event_organizer_header">Sign Up</string>
    <string name="event_organizer_prompt_first_line">Sign up to join our community of Event Organizer</string>
    <string name="event_organizer_prompt_second_line">Start organizing and managing events</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Enter your Email</string>
    <string name="password_hint">Create your Password</string>
    <string name="rpt_password_hint">Re-type Password</string>
    <string name="contact_number_hint">Contact Number</string>
    <string name="organization_government_id_hint">Organization Government ID</string>
    <string name="event_organizer_signup_create_an_account">Create an Account</string>

    <string name="title_activity_explorer_home">ExplorerHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--Event Organizer Home-->
    <!--Event Organizer New Event Fragment-->
    <string name="menu_home">Home</string>
    <string name="new_event_prompt">Let\'s get your event set up!</string>
    <string name="new_event_prompt_second_line"> Please fill the form with your event details</string>
    <string name="new_event_name_input_hint">Event Name</string>
    <string name="new_event_name_description_hint">Event Description</string>
    <string name="new_event_name_location_hint">Location</string>
    <string name="new_event_age_range">Age</string>
    <string name="new_event_time_range">Time</string>
    <string name="new_event_ticket_price">Price</string>
    <string name="new_event_date">Date</string>
    <string-array name="new_event_categories">
        <item>Music</item>
        <item>Art</item>
        <item>Education</item>
    </string-array>
    <string-array name="new_event_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Male &amp; Female</item>
    </string-array>
    <string name="new_event_image">Image</string>
    <string name="new_event_submit_button">Submit</string>
    <!--Event Organizer Dashboard-->
    <string name="event_organizer_dashboard_prompt">View and Edit your Events</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_event_organizer_home_screen">EventOrganizerHomeScreen</string>
    <string name="title_new_event">New Event</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_logout">Log out</string>

    <string name="explorer_home_title">Home</string>
    <string name="explorer_dashboard_title">Dashboard</string>
    <string name="explorer_profile_title">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_home">AdminHome</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="back_image">Back image</string>
    <string name="age_range_icon">Age range icon</string>
    <string name="location_icon">Location icon</string>
    <string name="time_icon">Time icon</string>
    <string name="time">time</string>
    <string name="start_at_6_00_pm_to_8_00_pm">start at 6:00 pm to 8:00 pm</string>
    <string name="_19_may_2024_thursday">19 May 2024 - Thursday</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="almond_book_club">Almond Book Club</string>
    <string name="event_title_almond_book_club">Event title: Almond Book Club</string>
    <string name="background_image_of_a_cafe">Background image of a cafe</string>
</resources>