<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_event_bottom_nav_button"
        android:icon="@drawable/new_event_vector"
        android:title="@string/title_new_event" />
    <item android:id="@+id/dashboard_bottom_nav_button"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"/>
    <item android:id="@+id/profile_bottom_nav_profile_button"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_profile"/>
    <item android:id="@+id/event_organizer_logout_button"
        android:title="@string/title_logout"
        android:icon="@drawable/ic_logout"/>
<!--    TODO: ADD LOGOOUT FUNCTIONALITY TO THIS BUTTON-->
</menu>