<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EventOrganizerSignUp">
    <ImageView
        android:id="@+id/top_right_blob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_right_blob"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>
    <ImageView
        android:id="@+id/small_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/small_eventure_logo_asset"
        android:layout_below="@id/top_right_blob"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-32dp"/>
    <TextView
        android:id="@+id/event_organizer_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36sp"
        android:textStyle="bold"
        android:text="@string/event_organizer_header"
        android:textAlignment="center"
        android:layout_below="@id/top_right_blob"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/event_organizer_signup_prompt_first_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/event_organizer_prompt_first_line"
        android:layout_below="@id/event_organizer_header"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="50dp"
        android:layout_marginHorizontal="40dp"
        />
    <TextView
        android:id="@+id/event_organizer_signup_prompt_second_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="70dp"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/event_organizer_prompt_second_line"
        android:layout_below="@id/event_organizer_signup_prompt_first_line"/>
    <EditText
        android:id="@+id/event_organizer_signup_username_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/event_organizer_signup_prompt_second_line"
        android:background="@drawable/custom_input_green"
        android:paddingHorizontal="30dp"
        android:hint="@string/username_hint"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/event_organizer_signup_email_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/event_organizer_signup_username_input"
        android:background="@drawable/custom_input_green"
        android:paddingHorizontal="30dp"
        android:hint="@string/email_hint"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/event_organizer_signup_password_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/event_organizer_signup_email_input"
        android:background="@drawable/custom_input_green"
        android:paddingHorizontal="30dp"
        android:hint="@string/password_hint"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/event_organizer_signup_rpt_password_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/event_organizer_signup_password_input"
        android:background="@drawable/custom_input_green"
        android:paddingHorizontal="30dp"
        android:hint="@string/rpt_password_hint"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/event_organizer_signup_number_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/event_organizer_signup_rpt_password_input"
        android:background="@drawable/custom_input_green"
        android:paddingHorizontal="30dp"
        android:hint="@string/contact_number_hint"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/event_organizer_signup_gid_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/event_organizer_signup_number_input"
        android:background="@drawable/custom_input_green"
        android:paddingHorizontal="30dp"
        android:hint="@string/organization_government_id_hint"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/event_organizer_signup_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/event_organizer_signup_gid_input"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/event_organizer_signup_create_an_account"
        android:textSize="18sp" />

</RelativeLayout>