<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EventOrganizerLogin">
    <ImageView
        android:id="@+id/top_right_blob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_right_blob"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/event_organizer_login_first_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_right_blob"
        android:text="@string/explorer_login_first_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/event_organizer_login_second_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/event_organizer_login_first_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="60dp"
        android:text="@string/event_organizer_login_second_prompt"
        android:textAlignment="center" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/event_organizer_login_asset"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/event_organizer_login_second_prompt"
        android:layout_marginTop="30dp"
        android:src="@drawable/event_organizer_login_asset"/>
    <EditText
        android:id="@+id/event_organizer_login_username_input"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@id/event_organizer_login_asset"
        android:layout_marginTop="20dp"
        android:autofillHints="Email or Username"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="25dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/event_organizer_login_username_or_email"
        android:textAlignment="textStart"
        android:background="@drawable/custom_input_green"
        android:textSize="16sp"

        />
    <EditText
        android:id="@+id/event_organizer_login_password_input"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@id/event_organizer_login_username_input"
        android:layout_marginTop="10dp"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:paddingHorizontal="25dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:textAlignment="textStart"
        android:background="@drawable/custom_input_green"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/event_organizer_login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginVertical="10dp"
        android:focusable="true"
        android:textAlignment="textStart"
        android:layout_below="@id/event_organizer_login_password_input"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_your_password"
        android:clickable="true"
        android:textSize="12sp"
        android:layout_marginStart="75dp"
        />
    <Button
        android:id="@+id/event_organizer_login_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/login_button"
        android:backgroundTint="@color/dark_green"
        android:layout_below="@id/event_organizer_login_forgot_password"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/event_organizer_login_create_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explorer_login_create_an_account"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:layout_below="@id/event_organizer_login_button"/>
</RelativeLayout>
