<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Explorer_Login">
<ImageView
    android:id="@+id/top_right_blob"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/top_right_blob"
    android:layout_alignParentEnd="true"
    android:layout_alignParentTop="true"/>
    <TextView
        android:id="@+id/explorer_login_first_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_right_blob"
        android:text="@string/explorer_login_first_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/explorer_login_second_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/explorer_login_first_prompt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp"
        android:text="@string/explorer_login_second_prompt"
        android:textAlignment="center" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/explorer_login_asset"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/explorer_login_second_prompt"
        android:layout_marginTop="30dp"
        android:src="@drawable/explorer_login_screen_asset"/>
    <EditText
        android:id="@+id/explorer_username_edit_text"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@id/explorer_login_asset"
        android:layout_marginTop="20dp"
        android:autofillHints="Email or Username"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="70dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:textAlignment="textStart"
        android:background="@drawable/custom_input_orange"
        android:textSize="16sp"

        />
    <EditText
        android:id="@+id/explorer_password_edit_text"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_below="@id/explorer_username_edit_text"
        android:layout_marginTop="10dp"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:paddingHorizontal="70dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:textAlignment="textStart"
        android:background="@drawable/custom_input_orange"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/explorer_login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:focusable="true"
        android:textAlignment="textStart"
        android:layout_below="@id/explorer_password_edit_text"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_your_password"
        android:clickable="true"
        android:textSize="12sp"
        android:layout_marginStart="75dp"
        />
    <Button
        android:id="@+id/explorer_login_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/login_button"
        android:backgroundTint="@color/primary_orange"
        android:layout_below="@id/explorer_login_forgot_password"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/explorer_login_create_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explorer_login_create_an_account"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:layout_below="@id/explorer_login_button"/>
</RelativeLayout>