<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ForgotPassword">
    <ImageView
        android:id="@+id/top_right_blob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_right_blob"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/forgot_password_first_view_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_right_blob"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/forgot_password_first_view_prompt"
        android:textSize="24sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/forgot_password_first_view_asset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/forgot_password_first_page_asset"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/forgot_password_first_view_prompt"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/enter_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_first_view_asset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/enter_email_address"
        android:textSize="18sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/email_address_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_input_green"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:layout_below="@id/enter_email_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/email_edit_text_hint"
        android:paddingHorizontal="20dp"
        />

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/email_address_edit_text"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/dark_green"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/reset_password" />

</RelativeLayout>